--- a/BarcodeApp/AndroidManifest.xml
+++ b/BarcodeApp/AndroidManifest.xml
@@ -1,50 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="karthik.BarcodeLocalizer"
-          android:versionCode="21"
-          android:versionName="2.1">
+    package="karthik.BarcodeLocalizer"
+    android:versionCode="21"
+    android:versionName="2.2" >
 
     <application
+        android:icon="@drawable/eye"
         android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-        
-        <activity android:name="karthik.BarcodeLocalizer.LoginActivity"
-                  android:label="@string/app_name">
+
+        <activity
+            android:name="karthik.BarcodeLocalizer.LoginActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="karthik.BarcodeLocalizer.BarcodeActivity"
-                  android:screenOrientation="landscape"
-                  android:configChanges="keyboardHidden|orientation">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="karthik.BarcodeLocalizer.LoginActivity" />
-    </activity>
-                  
-   </application>
+        <activity
+            android:name="karthik.BarcodeLocalizer.BarcodeActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:screenOrientation="landscape" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="karthik.BarcodeLocalizer.LoginActivity" />
+        </activity>
 
-    <supports-screens android:resizeable="true"
-                      android:smallScreens="true"
-                      android:normalScreens="true"
-                      android:largeScreens="true"
-                      android:anyDensity="true" />
+        <service
+            android:name=".BackgroundVideoRecorder"
+            android:exported="false" >
+        </service>
+    </application>
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true" />
 
     <uses-sdk android:minSdkVersion="8" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-	    
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.front.autofocus" android:required="false"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> 
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+	<uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.front"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.front.autofocus"
+        android:required="false" />
 
 </manifest>
